ft: get combined nft assets
