# cmd/api_cmd.go
@@ -95,6 +95,7 @@ func serveApi(db *dbCon.Queries, rdb *redis.Client, rawDb *sql.DB, ctx context.C
 	router.POST("/chain/:chain_id/collection", assetController.AddAssetCollection)
 	router.GET("/chain/:chain_id/collection", assetController.GetAssetCollection)
 	router.GET("/chain/:chain_id/collection/:collection_address/assets", assetController.GetAssetByChainIdAndContractAddress)
+	router.GET("/chain/:chain_id/nft-assets", assetController.GetNFTCombinedAsset)
 
 	// History routes
 	router.GET("/history", historyController.GetHistory)
